# intervox

./: .gitignore  CHANGELOG.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/scripts/: normalize-updater-json.mjs  normalize-updater-json.test.mjs  release-notes.mjs  verify-release.mjs
.github/workflows/: release.yml
doc/: RELEASING.md  intervox.md
src/: App.tsx  i18n.tsx  styles.css  updater.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  downloader.rs  export.rs  lib.rs  main.rs  playback_server.rs  process.rs  storage.rs  translation.rs  tts.rs
src-tauri/src/asr/: mod.rs
src/components/: CustomSelect.tsx  Sidebar.tsx  UpdateModal.tsx
src/hooks/: useIntervox.tsx
src/lib/: asrOptions.ts  tauri.ts
src/pages/: Downloader.tsx  Player.tsx  Settings.tsx  Tasks.tsx  Translate.tsx
src/types/: asr.ts
